# rakihire-docs

./: pyproject.toml
docs/: Architecture.drawio  Requirement.md  index.md
docs/ModelDesign/: Models.md
docs/UIDesign/: fronetnd.drawio
