[project]
name = "rakihire-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "rakesh.core",email = "rakesh.core01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.6.5,<10.0.0)"
]

[tool.poetry]
packages = [{include = "rakihire_docs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
